tests/baselines/reference/classStaticBlock20.errors.txt
classStaticBlock20.ts(2,5): error TS1184: Modifiers cannot appear here.
classStaticBlock20.ts(6,5): error TS1184: Modifiers cannot appear here.
classStaticBlock20.ts(10,5): error TS1184: Modifiers cannot appear here.


==== classStaticBlock20.ts (3 errors) ====
    class C {
        async static {
        ~~~~~
!!! error TS1184: Modifiers cannot appear here.
            // something
        }
    
        public static {
        ~~~~~~
!!! error TS1184: Modifiers cannot appear here.
            // something
        }
    
        readonly private static {
        ~~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
            // something
        }
    }
    